<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:orientation="vertical"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/button_container"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register_title"
            android:textSize="24sp"
            android:textColor="@color/black"
            android:layout_gravity="center"/>

        <EditText
            android:id="@+id/editTextName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:hint="@string/name_hint"
            android:textColor="@color/black"
            android:textColorHint="@color/grey"
            android:textSize="16sp"
            android:inputType="text"/>

        <EditText
            android:id="@+id/editTextEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:hint="@string/email_hint"
            android:textColor="@color/black"
            android:textColorHint="@color/grey"
            android:textSize="16sp"
            android:inputType="textEmailAddress"/>

        <EditText
            android:id="@+id/editTextPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:hint="@string/password_hint"
            android:textColor="@color/black"
            android:textColorHint="@color/grey"
            android:textSize="16sp"
            android:inputType="textPassword"/>

        <EditText
            android:id="@+id/editTextConfirmPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:hint="@string/confirm_password_hint"
            android:textColor="@color/black"
            android:textColorHint="@color/grey"
            android:textSize="16sp"
            android:inputType="textPassword"
            app:layout_constraintTop_toBottomOf="@id/editTextPassword"
            app:layout_constraintStart_toStartOf="@id/editTextPassword"
            app:layout_constraintEnd_toEndOf="@id/editTextPassword"
            app:layout_constraintBottom_toTopOf="@id/button_container"
            tools:ignore="NotSibling" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/list_user"
        android:layout_width="311dp"
        android:layout_height="116dp"
        android:layout_marginBottom="152dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/textViewUsers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/button_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_margin="16dp">

            <Button
                android:id="@+id/buttonCancel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:background="@drawable/register_button_background"
                android:text="@string/cancel"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/buttonRegister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/register_button_background"
                android:text="@string/register"
                android:textColor="@color/white"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"/>
        </LinearLayout>

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/grey" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:baselineAligned="false"
            android:orientation="vertical"
            android:layout_margin="16dp">

            <Button
                android:id="@+id/buttonDelete"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/register_button_background"
                android:text="@string/delete"
                android:textColor="@color/white"
                android:layout_marginStart="16dp"/>

            <Button
                android:id="@+id/buttonShowUsers"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/register_button_background"
                android:text="@string/consult"
                android:textColor="@color/white"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"/>


        </LinearLayout>
    </LinearLayout>




</androidx.constraintlayout.widget.ConstraintLayout>